fix gap header nav

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a{
 .menu_bar{
     list-style: none;
     justify-content: center;
-    gap: 5rem;
+    gap: 2rem;
     text-align: center;
     flex-grow: 2;
 }
